--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -5,10 +5,12 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "USER_ID":"sa",
+        "PASSWORD":"pa55w0rd!"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7119;http://localhost:5143"
+      "applicationUrl": "https://localhost:5000;http://localhost:5143"
     },
     "IIS Express": {
       "commandName": "IISExpress",
